# bmstu-docx

./: README.md  pyproject.toml
examples/: basic.md  full.md  lists-code.md  table-image.md
src/bmstu_docx/: __init__.py  cli.py  config.py  converter.py  docx_renderer.py  docx_styles.py  markdown_parser.py  models.py
tests/: test_cli.py  test_markdown_parser.py  test_renderer_basic.py
